plugins {
    id 'groovy'
    id 'java'
    id 'org.springframework.boot' version '3.1.0'
    id 'io.spring.dependency-management' version '1.1.0'
}

group = 'com.dillon'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation:3.1.2'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'org.liquibase:liquibase-core'
    testRuntimeOnly 'com.h2database:h2:2.2.220'
    testImplementation('org.codehaus.groovy:groovy:3.0.16')
    testImplementation('org.spockframework:spock-spring:2.4-M1-groovy-3.0')
    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-3.0'
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework:spring-test'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'

}

tasks.named('test') {
    useJUnitPlatform()
}

bootJar {
    archiveFileName = "wedding-rsvp-app-api.jar"
}

